Add Live Token Viewer sidebar

--- a/index.html
+++ b/index.html
@@ -149,6 +149,45 @@
         </div>
     </main>
 
+    <aside class="token-viewer">
+        <h3>Live Design Tokens</h3>
+        <div class="token-group">
+            <h4>Colors</h4>
+            <div class="token-row">
+                <span class="token-name">--primary</span>
+                <span class="token-value" id="token-primary"></span>
+            </div>
+            <div class="token-row">
+                <span class="token-name">--bg-color</span>
+                <span class="token-value" id="token-bg"></span>
+            </div>
+        </div>
+
+        <div class="token-group">
+            <h4>Typography</h4>
+            <div class="token-row">
+                <span class="token-name">--font-family</span>
+                <span class="token-value" id="token-font"></span>
+            </div>
+            <div class="token-row">
+                <span class="token-name">--base-size</span>
+                <span class="token-value" id="token-size"></span>
+            </div>
+        </div>
+
+        <div class="token-group">
+            <h4>Shape & Layout</h4>
+            <div class="token-row">
+                <span class="token-name">--radius</span>
+                <span class="token-value" id="token-radius"></span>
+            </div>
+            <div class="token-row">
+                <span class="token-name">--spacing</span>
+                <span class="token-value" id="token-spacing"></span>
+            </div>
+        </div>
+    </aside>
+
     <script src="script.js"></script>
 </body>
 
