Add author attribution footer

--- a/index.html
+++ b/index.html
@@ -147,6 +147,11 @@
             </section>
 
         </div>
+
+        <footer
+            style="margin-top: 4rem; padding-top: 2rem; border-top: 1px solid var(--border-color); text-align: center; font-size: 0.875rem; color: var(--secondary-color); opacity: 0.8;">
+            Proyecto experimental de Raul Marin para probar las evoluciones de los Design Systems y la IA Generativa.
+        </footer>
     </main>
 
     <aside class="token-viewer">
